[package]
name = "cmdline-parser"
version = "0.1.0"
authors = ["Klemens Schölhorn <klemens@schoelhorn.eu>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/klemens/cmdline-parser"
documentation = "https://docs.rs/cmdline-parser"
description = "Platform-resembling cmdline parsing for building shells"

[dependencies]
